# CalculatorProject

./: CMakeLists.txt  README.md
plugins/: CMakeLists.txt  funcabs.cpp  funccos.cpp  funcdeg.cpp  funcexp.cpp  funcln.cpp  funcsin.cpp  funcsqrt.cpp  simple_plugin.cpp
plugins/funcdeg/: CMakeLists.txt  funcdeg.cpp  funcdeg.h
plugins/funcln/: CMakeLists.txt  funcln.cpp  funcln.h
plugins/funcsin/: CMakeLists.txt  funcsin.cpp  funcsin.h
src/: CMakeLists.txt  main.cpp
src/calculator/: calculator.cpp  calculator.h  plugin_loader.cpp  plugin_loader.h
src/utils/: expression_parser.cpp  expression_parser.h
tests/: CMakeLists.txt  test_calculator.cpp  test_expression_parser.cpp  test_plugin_loader.cpp
